[gd_scene load_steps=60 format=3 uid="uid://bqdivu2kwx1hs"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_bsbma"]
[ext_resource type="Shader" path="res://whitecolor.gdshader" id="2_x5re7"]
[ext_resource type="Texture2D" uid="uid://b5an4hqnp2il7" path="res://Player/sprites/yvette-artfonpro.png" id="3_awh8a"]
[ext_resource type="PackedScene" uid="uid://crwyh0oolue7g" path="res://Collision/hitbox.tscn" id="3_eo8rt"]
[ext_resource type="Script" path="res://Player/sword_hitbox.gd" id="4_lnnfh"]
[ext_resource type="PackedScene" uid="uid://djymhmhx33hxy" path="res://Collision/hurtbox.tscn" id="5_paeja"]
[ext_resource type="Texture2D" uid="uid://dhtwyyl4d4r18" path="res://Shadows/MediumShadow.png" id="6_3tukx"]
[ext_resource type="Script" path="res://Player/interact_area.gd" id="9_isq66"]
[ext_resource type="Script" path="res://Player/player_interactions_host.gd" id="9_rpo0x"]
[ext_resource type="Script" path="res://Player/push_area.gd" id="10_bocwf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0qq43"]
shader = ExtResource("2_x5re7")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p20vv"]
height = 28.0

[sub_resource type="Animation" id="Animation_pht4r"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ki1yi"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ut1ht"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lhb6n"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ro51t"]
resource_name = "run_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:direction")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Interactions/AreaPivot:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wded1"]
resource_name = "RunDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gp8v0"]
resource_name = "RunLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 14, 13, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_52t03"]
resource_name = "RunRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 10, 9, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_21db0"]
resource_name = "RunUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 6, 5, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:direction")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interactions/AreaPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Interactions/AreaPivot/PushArea/PushCollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_np01d"]
_data = {
"IdleDown": SubResource("Animation_pht4r"),
"IdleLeft": SubResource("Animation_ki1yi"),
"IdleRight": SubResource("Animation_ut1ht"),
"IdleUp": SubResource("Animation_lhb6n"),
"RESET": SubResource("Animation_ro51t"),
"RunDown": SubResource("Animation_wded1"),
"RunLeft": SubResource("Animation_gp8v0"),
"RunRight": SubResource("Animation_52t03"),
"RunUp": SubResource("Animation_21db0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iucbs"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0dsql"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_alr7i"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_frih8"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hffpc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_iucbs")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0dsql")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_alr7i")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_frih8")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ah44s"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tgst7"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdgcd"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nm5tu"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1sf16"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ah44s")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_tgst7")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jdgcd")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_nm5tu")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8nre7"]
animation = &"RollLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wmwyv"]
animation = &"RollUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yklnr"]
animation = &"RollDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g4ciq"]
animation = &"RollRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uhxxy"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8nre7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_wmwyv")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yklnr")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_g4ciq")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t53xe"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iuery"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_efgqx"]
animation = &"RunUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_whu3u"]
animation = &"RunDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_582v6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_t53xe")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_iuery")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_efgqx")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_whu3u")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bfkad"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_12ysk"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dxpcw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ohi8d"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7xova"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f84hx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fyc1m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lfuto"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vs7ph"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_hffpc")
states/Attack/position = Vector2(376, 225)
states/End/position = Vector2(665, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_1sf16")
states/Idle/position = Vector2(376, 100)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_uhxxy")
states/Roll/position = Vector2(363, -4)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_582v6")
states/Run/position = Vector2(535, 100)
states/Start/position = Vector2(199, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_bfkad"), "Run", "End", SubResource("AnimationNodeStateMachineTransition_12ysk"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_dxpcw"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_ohi8d"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_7xova"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_f84hx"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_fyc1m"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_lfuto")]
graph_offset = Vector2(-46, -35)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dn61v"]
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c6usn"]
radius = 6.0
height = 16.0

[sub_resource type="Animation" id="Animation_84pn1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sn864"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_jxw3f"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70egw"]
_data = {
"RESET": SubResource("Animation_84pn1"),
"start": SubResource("Animation_sn864"),
"stop": SubResource("Animation_jxw3f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gawoj"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwadd"]
size = Vector2(12, 4)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 65
motion_mode = 1
script = ExtResource("1_bsbma")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0qq43")
position = Vector2(0, -14)
texture = ExtResource("3_awh8a")
hframes = 4
vframes = 4
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_p20vv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_np01d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vs7ph")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(0, 1)
parameters/Idle/blend_position = Vector2(0.0653358, -0.537885)
parameters/Roll/blend_position = Vector2(0, 1)
parameters/Run/blend_position = Vector2(0, 1)

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("3_eo8rt")]
unique_name_in_owner = true
position = Vector2(15, 0)
collision_layer = 8
script = ExtResource("4_lnnfh")

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
shape = SubResource("CapsuleShape2D_dn61v")
disabled = true
debug_color = Color(0.777253, 0.366387, 0.63249, 0.42)

[node name="Hurtbox" parent="." instance=ExtResource("5_paeja")]
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_c6usn")
debug_color = Color(0.47573, 0.588822, 1.92523e-07, 0.42)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("6_3tukx")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_70egw")
}

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("9_rpo0x")

[node name="AreaPivot" type="Marker2D" parent="Interactions"]

[node name="InteractArea" type="Area2D" parent="Interactions/AreaPivot"]
collision_layer = 128
collision_mask = 320
script = ExtResource("9_isq66")

[node name="InteractCollisionShape2D" type="CollisionShape2D" parent="Interactions/AreaPivot/InteractArea"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_gawoj")
debug_color = Color(0.748437, 0.46068, 0.00717264, 0.42)

[node name="PushArea" type="Area2D" parent="Interactions/AreaPivot"]
collision_mask = 320
script = ExtResource("10_bocwf")

[node name="PushCollisionShape" type="CollisionShape2D" parent="Interactions/AreaPivot/PushArea"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_iwadd")
debug_color = Color(0.0888826, 0.587169, 0.75343, 0.42)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
